// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<div
  className="button"
  onClick={[Function]}
>
  Press Me
</div>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="button"
/>
`;
